# faded

./: .dockerignore  .eslintignore  .eslintrc  .gitignore  Dockerfile  Dockerfile.dev  README.md  app.go  docker-compose.yml  faded-mind-map.drawio  go.mod  index.html  main.go  npm-tool.cjs  npm-tool.js  package-lock.json  package.json  pull-bcms.sh  rollup.config.js  storage.tgz  store.tgz  svemir.tgz  tsconfig.json  vite.config.ts  wails.json
backend/: .eslintignore  .eslintrc  .gitignore  bcms.config.js  jwt.tgz  package-lock.json  package.json  tsconfig.json
client/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/: .eslintignore  index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
game/: account.go  bounding-box.go  collision.go  consts.go  main.go  map-info.go  math.go  model.go  path-finding.go  player.go  settings.go  state.go  util.go
proxy/: nginx.conf
public/: index.html  sw.js
scripts/: build-types.cjs  pull-bcms.cjs  pull-types.cjs
src/: App.vue  _router.tsx  app.svelte  app.tsx  bcms-client.ts  bcms.ts  browser-storage.ts  config.ts  main.ts  pull-types.ts  query.ts  repo.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  state.rs  storage.rs
src-tauri/src/game/: bounding_box.rs  map_info.rs  map_node.rs  math.rs  mod.rs  nogo.rs  object.rs  on_tick.rs  path_finding.rs  player.rs  point.rs  projectile.rs  size.rs  store.rs
src-tauri/src/models/: account.rs  mod.rs  model.rs  settings.rs
src-tauri/src/server/: mod.rs
(+525 files in other folders)
